@@ -7,6 +7,7 @@ import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertSame;
 import static org.junit.Assert.assertTrue;
+import static org.mockito.Mockito.mock;
 
 import java.util.Collections;
 import java.util.List;
@@ -22,6 +23,7 @@ import com.nhl.link.rest.DataResponse;
 import com.nhl.link.rest.Entity;
 import com.nhl.link.rest.SizeConstraints;
 import com.nhl.link.rest.TreeConstraints;
+import com.nhl.link.rest.runtime.cayenne.ICayennePersister;
 import com.nhl.link.rest.runtime.constraints.ConstraintsHandler;
 
 public class ConstraintsHandlerTest {
@@ -34,9 +36,11 @@ public class ConstraintsHandlerTest {
 
 	@Before
 	public void before() {
+		
+		ICayennePersister persister = mock(ICayennePersister.class);
 		List<TreeConstraints<?>> r = Collections.emptyList();
 		List<TreeConstraints<?>> w = Collections.emptyList();
-		this.constraintHandler = new ConstraintsHandler(r, w);
+		this.constraintHandler = new ConstraintsHandler(persister, r, w);
 
 		DataMap dm = new DataMap();
 
