@@ -1,0 +1,11 @@
+package com.nhl.link.rest.unit.cayenne;
+
+import com.nhl.link.rest.annotation.ClientReadable;
+import com.nhl.link.rest.unit.cayenne.auto._E11;
+
+@ClientReadable("address")
+public class E11 extends _E11 {
+
+	private static final long serialVersionUID = 1L;
+
+}
