@@ -1,0 +1,107 @@
+package com.nhl.link.rest.unit.cayenne.auto;
+
+import java.math.BigDecimal;
+import java.util.Date;
+
+import org.apache.cayenne.CayenneDataObject;
+import org.apache.cayenne.exp.Property;
+
+import com.nhl.link.rest.unit.cayenne.E11;
+
+/**
+ * Class _E10 was generated by Cayenne.
+ * It is probably a good idea to avoid changing this class manually,
+ * since it may be overwritten next time code is regenerated.
+ * If you need to make any customizations, please use subclass.
+ */
+public abstract class _E10 extends CayenneDataObject {
+
+    private static final long serialVersionUID = 1L; 
+
+    @Deprecated
+    public static final String C_BOOLEAN_PROPERTY = "cBoolean";
+    @Deprecated
+    public static final String C_DATE_PROPERTY = "cDate";
+    @Deprecated
+    public static final String C_DECIMAL_PROPERTY = "cDecimal";
+    @Deprecated
+    public static final String C_INT_PROPERTY = "cInt";
+    @Deprecated
+    public static final String C_TIME_PROPERTY = "cTime";
+    @Deprecated
+    public static final String C_TIMESTAMP_PROPERTY = "cTimestamp";
+    @Deprecated
+    public static final String C_VARCHAR_PROPERTY = "cVarchar";
+    @Deprecated
+    public static final String E11S_PROPERTY = "e11s";
+
+    public static final String ID_PK_COLUMN = "id";
+
+    public static final Property<Boolean> C_BOOLEAN = new Property<Boolean>("cBoolean");
+    public static final Property<Date> C_DATE = new Property<Date>("cDate");
+    public static final Property<BigDecimal> C_DECIMAL = new Property<BigDecimal>("cDecimal");
+    public static final Property<Integer> C_INT = new Property<Integer>("cInt");
+    public static final Property<Date> C_TIME = new Property<Date>("cTime");
+    public static final Property<Date> C_TIMESTAMP = new Property<Date>("cTimestamp");
+    public static final Property<String> C_VARCHAR = new Property<String>("cVarchar");
+    public static final Property<E11> E11S = new Property<E11>("e11s");
+
+    public void setCBoolean(Boolean cBoolean) {
+        writeProperty("cBoolean", cBoolean);
+    }
+    public Boolean getCBoolean() {
+        return (Boolean)readProperty("cBoolean");
+    }
+
+    public void setCDate(Date cDate) {
+        writeProperty("cDate", cDate);
+    }
+    public Date getCDate() {
+        return (Date)readProperty("cDate");
+    }
+
+    public void setCDecimal(BigDecimal cDecimal) {
+        writeProperty("cDecimal", cDecimal);
+    }
+    public BigDecimal getCDecimal() {
+        return (BigDecimal)readProperty("cDecimal");
+    }
+
+    public void setCInt(Integer cInt) {
+        writeProperty("cInt", cInt);
+    }
+    public Integer getCInt() {
+        return (Integer)readProperty("cInt");
+    }
+
+    public void setCTime(Date cTime) {
+        writeProperty("cTime", cTime);
+    }
+    public Date getCTime() {
+        return (Date)readProperty("cTime");
+    }
+
+    public void setCTimestamp(Date cTimestamp) {
+        writeProperty("cTimestamp", cTimestamp);
+    }
+    public Date getCTimestamp() {
+        return (Date)readProperty("cTimestamp");
+    }
+
+    public void setCVarchar(String cVarchar) {
+        writeProperty("cVarchar", cVarchar);
+    }
+    public String getCVarchar() {
+        return (String)readProperty("cVarchar");
+    }
+
+    public void setE11s(E11 e11s) {
+        setToOneTarget("e11s", e11s, true);
+    }
+
+    public E11 getE11s() {
+        return (E11)readProperty("e11s");
+    }
+
+
+}
