@@ -1,0 +1,59 @@
+package com.nhl.link.rest.unit.cayenne.auto;
+
+import java.util.List;
+
+import org.apache.cayenne.CayenneDataObject;
+import org.apache.cayenne.exp.Property;
+
+import com.nhl.link.rest.unit.cayenne.E10;
+
+/**
+ * Class _E11 was generated by Cayenne.
+ * It is probably a good idea to avoid changing this class manually,
+ * since it may be overwritten next time code is regenerated.
+ * If you need to make any customizations, please use subclass.
+ */
+public abstract class _E11 extends CayenneDataObject {
+
+    private static final long serialVersionUID = 1L; 
+
+    @Deprecated
+    public static final String ADDRESS_PROPERTY = "address";
+    @Deprecated
+    public static final String NAME_PROPERTY = "name";
+    @Deprecated
+    public static final String E10_PROPERTY = "e10";
+
+    public static final String ID_PK_COLUMN = "id";
+
+    public static final Property<String> ADDRESS = new Property<String>("address");
+    public static final Property<String> NAME = new Property<String>("name");
+    public static final Property<List<E10>> E10 = new Property<List<E10>>("e10");
+
+    public void setAddress(String address) {
+        writeProperty("address", address);
+    }
+    public String getAddress() {
+        return (String)readProperty("address");
+    }
+
+    public void setName(String name) {
+        writeProperty("name", name);
+    }
+    public String getName() {
+        return (String)readProperty("name");
+    }
+
+    public void addToE10(E10 obj) {
+        addToManyTarget("e10", obj, true);
+    }
+    public void removeFromE10(E10 obj) {
+        removeToManyTarget("e10", obj, true);
+    }
+    @SuppressWarnings("unchecked")
+    public List<E10> getE10() {
+        return (List<E10>)readProperty("e10");
+    }
+
+
+}
