@@ -11,6 +11,22 @@
 		<db-attribute name="id" type="INTEGER" isPrimaryKey="true" isGenerated="true" isMandatory="true"/>
 		<db-attribute name="name" type="VARCHAR" length="100"/>
 	</db-entity>
+	<db-entity name="e10" schema="utest">
+		<db-attribute name="c_boolean" type="BOOLEAN"/>
+		<db-attribute name="c_date" type="DATE"/>
+		<db-attribute name="c_decimal" type="DECIMAL" length="10" scale="2"/>
+		<db-attribute name="c_int" type="INTEGER"/>
+		<db-attribute name="c_time" type="TIME"/>
+		<db-attribute name="c_timestamp" type="TIMESTAMP"/>
+		<db-attribute name="c_varchar" type="VARCHAR" length="100"/>
+		<db-attribute name="id" type="INTEGER" isPrimaryKey="true" isGenerated="true" isMandatory="true"/>
+	</db-entity>
+	<db-entity name="e11" schema="utest">
+		<db-attribute name="address" type="VARCHAR" length="255"/>
+		<db-attribute name="e10_id" type="INTEGER"/>
+		<db-attribute name="id" type="INTEGER" isPrimaryKey="true" isGenerated="true" isMandatory="true"/>
+		<db-attribute name="name" type="VARCHAR" length="100"/>
+	</db-entity>
 	<db-entity name="e2" schema="utest">
 		<db-attribute name="address" type="VARCHAR" length="255"/>
 		<db-attribute name="id" type="INTEGER" isPrimaryKey="true" isGenerated="true" isMandatory="true"/>
@@ -59,6 +75,19 @@
 		<obj-attribute name="description" type="java.lang.String" db-attribute-path="description"/>
 		<obj-attribute name="name" type="java.lang.String" db-attribute-path="name"/>
 	</obj-entity>
+	<obj-entity name="E10" className="com.nhl.link.rest.unit.cayenne.E10" dbEntityName="e10">
+		<obj-attribute name="cBoolean" type="java.lang.Boolean" db-attribute-path="c_boolean"/>
+		<obj-attribute name="cDate" type="java.util.Date" db-attribute-path="c_date"/>
+		<obj-attribute name="cDecimal" type="java.math.BigDecimal" db-attribute-path="c_decimal"/>
+		<obj-attribute name="cInt" type="java.lang.Integer" db-attribute-path="c_int"/>
+		<obj-attribute name="cTime" type="java.util.Date" db-attribute-path="c_time"/>
+		<obj-attribute name="cTimestamp" type="java.util.Date" db-attribute-path="c_timestamp"/>
+		<obj-attribute name="cVarchar" type="java.lang.String" db-attribute-path="c_varchar"/>
+	</obj-entity>
+	<obj-entity name="E11" className="com.nhl.link.rest.unit.cayenne.E11" dbEntityName="e11">
+		<obj-attribute name="address" type="java.lang.String" db-attribute-path="address"/>
+		<obj-attribute name="name" type="java.lang.String" db-attribute-path="name"/>
+	</obj-entity>
 	<obj-entity name="E2" className="com.nhl.link.rest.unit.cayenne.E2" dbEntityName="e2">
 		<obj-attribute name="address" type="java.lang.String" db-attribute-path="address"/>
 		<obj-attribute name="name" type="java.lang.String" db-attribute-path="name"/>
@@ -91,6 +120,12 @@
 	</obj-entity>
 	<obj-entity name="E9" className="com.nhl.link.rest.unit.cayenne.E9" dbEntityName="e9">
 	</obj-entity>
+	<db-relationship name="e11s" source="e10" target="e11" toMany="false">
+		<db-attribute-pair source="id" target="e10_id"/>
+	</db-relationship>
+	<db-relationship name="e10" source="e11" target="e10" toMany="true">
+		<db-attribute-pair source="e10_id" target="id"/>
+	</db-relationship>
 	<db-relationship name="e3s" source="e2" target="e3" toMany="true">
 		<db-attribute-pair source="id" target="e2_id"/>
 	</db-relationship>
@@ -115,6 +150,8 @@
 	<db-relationship name="e8" source="e9" target="e8" toMany="false">
 		<db-attribute-pair source="e8_id" target="id"/>
 	</db-relationship>
+	<obj-relationship name="e11s" source="E10" target="E11" deleteRule="Nullify" db-relationship-path="e11s"/>
+	<obj-relationship name="e10" source="E11" target="E10" deleteRule="Deny" db-relationship-path="e10"/>
 	<obj-relationship name="e3s" source="E2" target="E3" deleteRule="Deny" db-relationship-path="e3s"/>
 	<obj-relationship name="e2" source="E3" target="E2" deleteRule="Nullify" db-relationship-path="e2"/>
 	<obj-relationship name="e5" source="E3" target="E5" deleteRule="Nullify" db-relationship-path="e5"/>
